// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SolidCard expect to render 1`] = `
<Card
  className="xa-c-card-solid"
>
  <CardBody>
    <h2
      className="pf-c-title pf-m-3xl"
    >
      My Title
    </h2>
    <p>
      My description
    </p>
  </CardBody>
</Card>
`;

exports[`SolidCard expect to render with setted width 1`] = `
<Card
  className="xa-c-card-solid"
  style={
    Object {
      "width": 123,
    }
  }
>
  <CardBody>
    <h2
      className="pf-c-title pf-m-3xl"
    >
      My Title
    </h2>
    <p>
      My description
    </p>
  </CardBody>
</Card>
`;
